--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sawi",
-  "version": "0.1.0",
+  "name": "unofficial-sawi-webcampus",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
